--- a/myGame.css
+++ b/myGame.css
@@ -4,20 +4,20 @@ h1 {
   text-align: center;
 }
 #strip {
-  align: centre;
+  text-align: centre;
 }
 .square {
   width: 100px;
   background: purple;
   height: 100px;
   float: left;
-  margin: 1.66%;
+  margin: 2%;
   border-radius: 15%;
   transition: background 0.6s;
   --webkit-transition: background 0.6s;
   --moz-transition: background 0.6s;
 }
 .container {
-  width: 75%;
+  width: 400px;
   justify-content: center;
 }
