--- a/myGame.css
+++ b/myGame.css
@@ -3,21 +3,39 @@ h1 {
   background-color: lightcoral;
   text-align: center;
 }
-#strip {
-  text-align: centre;
+
+#stripe {
+  width: 100%;
+  padding-inline-start: 0px;
+  text-align: center;
+}
+
+button {
+  margin: auto;
+  border: none;
+  outline: none;
+  background-color: aqua;
+  background-size: 10px;
+  background-position: 10px;
+  background-clip: padding-box;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
 .square {
   width: 100px;
   background: purple;
   height: 100px;
-  float: left;
-  margin: 2%;
+  margin: 3%;
   border-radius: 15%;
   transition: background 0.6s;
   --webkit-transition: background 0.6s;
   --moz-transition: background 0.6s;
 }
 .container {
+  margin: 20px auto;
   width: 400px;
   justify-content: center;
+}
+.selected {
+  background-color: blue;
 }
