--- a/myGame.css
+++ b/myGame.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
   color: midnightblue;
-  background-color: palegreen;
+  background-color: lightgoldenrodyellow;
   text-align: center;
   padding: 20px;
   margin: 0;
@@ -21,7 +21,6 @@ h1 {
 button {
   height: 100%;
   margin: auto;
-  border: red;
   outline: none;
   padding: auto;
   background-size: 10px;
@@ -36,6 +35,7 @@ button {
   height: 100px;
   margin: 3%;
   border-radius: 15%;
+  float: left;
   transition: background 0.6s;
   --webkit-transition: background 0.6s;
   --moz-transition: background 0.6s;
