--- a/myGame.css
+++ b/myGame.css
@@ -1,50 +1,74 @@
 body {
-  background-color: antiquewhite;
+  background-color: #232323;
+  margin: 0;
+  font-family: "Montserrat", "Avenir";
+}
+
+.square {
+  width: 30%;
+  background: purple;
+  padding-bottom: 30%;
+  float: left;
+  margin: 1.66%;
+  border-radius: 15%;
+  transition: background 0.6s;
+  -webkit-transition: background 0.6s;
+  -moz-transition: background 0.6s;
+}
+
+#container {
+  margin: 20px auto;
+  max-width: 600px;
 }
 
 h1 {
-  color: midnightblue;
-  background-color: lightgoldenrodyellow;
   text-align: center;
-  padding: 20px;
+  line-height: 1.1;
+  font-weight: normal;
+  color: white;
+  background: steelblue;
   margin: 0;
+  text-transform: uppercase;
+  padding: 20px 0;
+}
+
+#colorDisplay {
+  font-size: 200%;
+}
+
+#message {
+  display: inline-block;
+  width: 20%;
 }
 
 #stripe {
-  background-color: seashell;
-  width: 100%;
-  padding-inline-start: 0px;
+  background: white;
+  height: 30px;
   text-align: center;
-  margin: 0;
+  color: black;
+}
+
+.selected {
+  color: white;
+  background: steelblue;
 }
 
 button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
   height: 100%;
-  margin: auto;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
   outline: none;
-  padding: auto;
-  background-size: 10px;
-  background-position: 10px;
-  background-clip: padding-box;
-  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
 }
-.square {
-  width: 100px;
-  background: purple;
-  height: 100px;
-  margin: 3%;
-  border-radius: 15%;
-  float: left;
-  transition: background 0.6s;
-  --webkit-transition: background 0.6s;
-  --moz-transition: background 0.6s;
-}
-.container {
-  margin: 20px auto;
-  width: 400px;
-  justify-content: center;
-}
-.selected {
-  background-color: palegreen;
+
+button:hover {
+  color: white;
+  background: steelblue;
 }
